# chksum

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-linux-musl.yml  rust-linux.yml  ubuntu-release.yml
src/: checksum.rs  cmd_line.rs  error.rs  main.rs
