[package]
name = "chksum"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
num_cpus = "1.13"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
walkdir = "2"
anyhow = "1.0"
threadpool = "1.8"
thiserror = "1.0"
digest = { version = "0.9", features = ["alloc"] }
itertools = "0.10"

[dev-dependencies]
tempfile = "3.2"
